--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+<!Doctype html>
+<html>
+  
+  <head>
+    <title>
+      this is title of the page
+    </title>
+  </head>
+  <body>
+
+  </body>
+</html>
